--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,10 +1,9 @@
 on:
   schedule:
-    - cron: '*/5 * * * *'
-
+    - cron: "*/5 * * * *"  
 jobs:
   test_schedule:
     runs-on: ubuntu-latest
     steps:
-      - name: Run Every 5 Min
+      - name: Show Server Time
         run: echo "The current Server Time is $(date)"
