--- a/.github/workflows/custom-action.yml
+++ b/.github/workflows/custom-action.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: omenking/barsoom@0.0.6
+        uses: A17B/hello_github_actions@0.0.1
         with:
           name: 'Brown'
       # Use the output from the `hello` step
